--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -245,12 +245,24 @@
             margin: 10px 0;
         }
 
+        .board-container {
+            position: relative;
+            width: fit-content;
+            margin: 0 auto;
+            padding: 0 120px;
+            /* Изменено с padding-right на padding */
+        }
+
         .pips-container {
             position: absolute;
             width: 100%;
             height: 100%;
             pointer-events: none;
             z-index: 1;
+            left: 0;
+            /* Добавлено */
+            top: 0;
+            /* Добавлено */
         }
 
         .pips-box {
@@ -269,14 +281,14 @@
 
         .pips-black {
             top: 0;
-            right: -120px;
-            /* Выносим за пределы доски */
+            right: 10px;
+            /* Изменено с -120px на 10px */
         }
 
         .pips-red {
             bottom: 0;
-            right: -120px;
-            /* Выносим за пределы доски */
+            right: 10px;
+            /* Изменено с -120px на 10px */
         }
 
         /* Добавляем обертку для канваса и пипсов */
@@ -285,8 +297,45 @@
             position: relative;
             width: fit-content;
             margin: 0 auto;
-            padding-right: 120px;
-            /* Оставляем место для пипсов */
+            padding: 0 120px;
+            /* Изменено с padding-right на padding */
+        }
+
+        .pips-container {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            /* Добавлено */
+        }
+
+        .pips-box {
+            position: absolute;
+            width: 100px;
+            height: 50px;
+            background-color: #ffffff;
+            border: 2px solid #333;
+            border-radius: 4px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: bold;
+            color: #000000;
+        }
+
+        .pips-black {
+            top: 0;
+            right: 10px;
+            /* Изменено с -120px на 10px */
+        }
+
+        .pips-red {
+            bottom: 0;
+            right: 10px;
+            /* Изменено с -120px на 10px */
         }
     </style>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
