--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -30,8 +30,8 @@
             border: 2px solid #333;
             border-radius: 8px;
             background-color: #2a2a2a;
-            max-width: 100%;
-            height: auto;
+            width: 100vmin;
+            height: 100vmin;
             display: block;
             margin: 0 auto 20px;
         }
@@ -161,8 +161,8 @@
             }
 
             canvas {
-                width: 100%;
-                height: 100%;
+                width: 100vmin;
+                height: 100vmin;
             }
 
             #controls {
@@ -210,8 +210,8 @@
             }
 
             canvas {
-                width: 100%;
-                height: 100%;
+                width: 100vmin;
+                height: 100vmin;
             }
 
             button {
@@ -247,6 +247,8 @@
 
         .board-container {
             position: relative;
+            width: 100vmin;
+            height: 100vmin;
             margin: 0 auto;
         }
 
@@ -320,7 +322,7 @@
             font-weight: bold;
             color: #000000;
             left: 50%;
-            transform: translateX(-100%);
+            transform: translateX(100%);
             /* Center horizontally */
         }
 
