--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -254,23 +254,27 @@
         .pips-above-board {
             background-color: #000000;
             color: #ffffff;
-            padding: 10px 20px;
+            padding: 3px 6px;
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
             margin-bottom: 10px;
-            text-align: center;
+            text-align: right;
+            display: inline-block;
+            width: fit-content;
         }
 
         .pips-below-board {
             background-color: #ffffff;
             color: #000000;
-            padding: 10px 20px;
+            padding: 3px 6px;
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
             margin-top: 10px;
-            text-align: center;
+            text-align: right;
+            display: inline-block;
+            width: fit-content;
         }
     </style>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
