--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -258,10 +258,11 @@
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             text-align: right;
-            display: inline-block;
+            display: block;
             width: fit-content;
+            margin-left: auto;
         }
 
         .pips-below-board {
@@ -271,10 +272,11 @@
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
-            margin-top: 10px;
+            margin-top: 5px;
             text-align: right;
-            display: inline-block;
+            display: block;
             width: fit-content;
+            margin-left: auto;
         }
     </style>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
