--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -258,7 +258,7 @@
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
-            margin-bottom: 5px;
+            margin-bottom: 1px;
             text-align: right;
             display: block;
             width: fit-content;
@@ -268,10 +268,11 @@
         .pips-below-board {
             background-color: #ffffff;
             color: #000000;
-            padding: 3px 1px;
+            padding: 3px 6px;
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
+            margin-top: 2px;
             text-align: right;
             display: block;
             width: fit-content;
