--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -268,11 +268,12 @@
         .pips-below-board {
             background-color: #ffffff;
             color: #000000;
-            padding: 3px 80px;
+            padding: 3px 6px;
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
             text-align: right;
+            margin-bottom: -10px;
             display: block;
             width: fit-content;
             margin-left: auto;
