--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -272,8 +272,8 @@
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
+            margin-top: 2px;
             text-align: right;
-            margin-bottom: -100px;
             display: block;
             width: fit-content;
             margin-left: auto;
