--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -399,6 +399,41 @@
         const Dice6b = new Image();
         Dice6b.src = '/static/6b.png';
 
+        let imagesLoaded = 0;
+        const checkImagesLoaded = () => {
+            imagesLoaded++;
+            console.log('Images loaded:', imagesLoaded);
+            if (imagesLoaded === 15 && dataLoaded) {
+                console.log('All images and data loaded, rendering turn', current);
+                render(current);
+                updateButtons();
+                infoDiv.innerHTML = '';
+            }
+        };
+
+        boardImg.onload = checkImagesLoaded;
+        blackImg.onload = checkImagesLoaded;
+        whiteImg.onload = checkImagesLoaded;
+        Dice1w.onload = checkImagesLoaded;
+        Dice2w.onload = checkImagesLoaded;
+        Dice3w.onload = checkImagesLoaded;
+        Dice4w.onload = checkImagesLoaded;
+        Dice5w.onload = checkImagesLoaded;
+        Dice6w.onload = checkImagesLoaded;
+        Dice1b.onload = checkImagesLoaded;
+        Dice2b.onload = checkImagesLoaded;
+        Dice3b.onload = checkImagesLoaded;
+        Dice4b.onload = checkImagesLoaded;
+        Dice5b.onload = checkImagesLoaded;
+        Dice6b.onload = checkImagesLoaded;
+
+        // Обработка ошибок загрузки изображений
+        [boardImg, blackImg, whiteImg, Dice1w, Dice2w, Dice3w, Dice4w, Dice5w, Dice6w, Dice1b, Dice2b, Dice3b, Dice4b, Dice5b, Dice6b].forEach(img => {
+            img.onerror = () => {
+                console.error(`Failed to load image: ${img.src}`);
+                infoDiv.innerHTML = '<div class="error">Error loading game assets. Please try again later.</div>';
+            };
+        });
 
         const diceImages = {
             white: {
