--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -403,7 +403,7 @@
         const checkImagesLoaded = () => {
             imagesLoaded++;
             console.log('Images loaded:', imagesLoaded);
-            if (imagesLoaded === 15 && dataLoaded) {
+            if (imagesLoaded > 0 && dataLoaded) {
                 console.log('All images and data loaded, rendering turn', current);
                 render(current);
                 updateButtons();
