--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -290,9 +290,9 @@
     <div class="container">
         <h1>Backgammon Game Analysis</h1>
         <div id="players-info"></div>
-        <div id="black-pips" class="pips-above-board">Черные: 0</div>
+        <div id="black-pips" class="pips-above-board">0</div>
         <canvas id="boardCanvas" width="800" height="800"></canvas>
-        <div id="red-pips" class="pips-below-board">Белые: 0</div>
+        <div id="red-pips" class="pips-below-board">0</div>
 
         <div id="controls">
             <button onclick="prevTurn()" id="prevBtn">←</button>
@@ -344,7 +344,7 @@
                     if (data[0]?.action === 'skip') {
                         current = 1;
                     }
-                    if (imagesLoaded === 9) {
+                    if (imagesLoaded === 15) {
                         render(current);
                         updateButtons();
                         infoDiv.innerHTML = '';
@@ -403,7 +403,7 @@
         const checkImagesLoaded = () => {
             imagesLoaded++;
             console.log('Images loaded:', imagesLoaded);
-            if (imagesLoaded > 0 && dataLoaded) {
+            if (imagesLoaded === 15 && dataLoaded) {
                 console.log('All images and data loaded, rendering turn', current);
                 render(current);
                 updateButtons();
