--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -642,7 +642,7 @@
             } else if (item.moves && item.moves.length > 0) {
                 info = `<strong>Ход:</strong> ${item.gnu_move}`;
             } else if (item.moves && item.moves.length === 0) {
-                info = `<strong>Ход:</strong> 'Пропуск'`;
+                info = `<strong>Ход:</strong> Пропуск`;
             } else {
                 info = '<div class="info-text">No moves available for this turn.</div>';
                 console.warn('No moves for turn:', turn, item);
