--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -557,8 +557,8 @@
                 }
             }
 
-            const offX = (player === 'black') ? 20 : 760;
-            const offY = 400;
+            const offX = 750;
+            const offY = (player === 'black') ? 20 : 760;
             if (positions.off && positions.off !== 0) {
                 ctx.fillText('Off', offX, offY - 10);
                 ctx.fillText(`${positions.off}`, offX, offY + 40);
