--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -40,7 +40,7 @@
             background-color: #2d2d2d;
             border-radius: 8px;
             padding: 20px;
-            margin: 20px auto;
+            margin: 20px 50%;
             border: 1px solid #444;
             width: 50%;
         }
