--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -43,7 +43,9 @@
             margin: 20px auto;
             border: 1px solid #444;
             width: 50%;
-            text-align: center;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .hints-table {
